--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,16 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= yield(:head) %>
 </head>
 <body>
 
+<% flash.each do |k, v| %>
+  <div id="<%= k %>"><%= v %></div>
+<% end %>
+
 <%= yield %>
 
+<%= yield(:bottom) %>
 </body>
 </html>
