--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,7 @@
         <td><%= product.name %></td>
         <td><%= product.price %></td>
         <td><%= link_to 'Buy (Drop In)', buy_drop_in_product_path(product) %></td>
+        <td><%= link_to 'Buy (Transparent Redirect)', buy_transparent_redirect_product_path(product) %></td>
       </tr>
     <% end %>
   </tbody>
