--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,6 +19,7 @@
         <td><%= link_to 'Buy (Drop In)', buy_drop_in_product_path(product) %></td>
         <td><%= link_to 'Buy (Transparent Redirect)', buy_transparent_redirect_product_path(product) %></td>
         <td><%= link_to 'Buy (Server to server)', buy_server_to_server_product_path(product) %></td>
+        <td><%= link_to 'Buy (Encrypted)', buy_encrypted_product_path(product) %></td>
       </tr>
     <% end %>
   </tbody>
