--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Price</th>
-      <th colspan="3"></th>
+      <th colspan="6"></th>
     </tr>
   </thead>
 
@@ -21,6 +21,7 @@
         <td><%= link_to 'Buy (Server to server)', buy_server_to_server_product_path(product) %></td>
         <td><%= link_to 'Buy (Encrypted)', buy_encrypted_product_path(product) %></td>
         <td><%= link_to 'Buy (Tokenized)', buy_tokenized_product_path(product) %></td>
+        <td><%= link_to 'Buy (Stripe)', buy_stripe_product_path(product) %></td>
       </tr>
     <% end %>
   </tbody>
